--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html manifest="site.manifest">
+<html>
     <head>
         <title>Remote</title>
     </head>
@@ -18,21 +18,21 @@
         <div id="rotation0" class="button_container">
             <button class="button w1 blank">&nbsp;</button>
             <button class="button" style="position: absolute;left: 10px;top: 10px;width: 30px;height: 30px" data="config">C</button>
-            <button class="button" data="0xF026">Up</button>
+            <button class="button" data="Input.Up">Up</button>
             <button class="button w1 blank">&nbsp;</button>
             <br>
-            <button class="button" data="0xF025">Left</button>
-            <button class="button" data="0xF00D">OK</button>
-            <button class="button" data="0xF027">Right</button>
+            <button class="button" data="Input.Left">Left</button>
+            <button class="button" data="Input.Select">OK</button>
+            <button class="button" data="Input.Right">Right</button>
             <br>
             <button class="button w1 blank">&nbsp;</button>
-            <button class="button" data="0xF028">Down</button>
+            <button class="button" data="Input.Down">Down</button>
             <button class="button w1 blank">&nbsp;</button>
             <br>
-            <button class="button w2" data="0xF050">Play/Pause</button>
-            <button class="button w1" data="0xF058">Stop</button>
+            <button class="button w2" data="Player.PlayPause">Play/Pause</button>
+            <button class="button w1" data="Player.Stop">Stop</button>
             <br>
-            <button class="button h1_2" data="0xF008">..</button>
+            <button class="button h1_2" data="Input.Back">..</button>
             <button class="button h1_2" data="0xF0BD">Vol -</button>
             <button class="button h1_2" data="0xF0BB">Vol +</button>
             <br>
