Add volume control for Eden

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <button class="button w1" data="Player.Stop">Stop</button>
             <br>
             <button class="button h1_2" data="Input.Back">..</button>
-            <button class="button h1_2" data="0xF0BD">Vol -</button>
-            <button class="button h1_2" data="0xF0BB">Vol +</button>
+            <button class="button h1_2" data="Volume.Down">Vol -</button>
+            <button class="button h1_2" data="Volume.Up">Vol +</button>
             <br>
         </div>
         
