Abstract proxy sending

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <button class="button h1_2" data="Input.Back">..</button>
             <button class="button h1_2" data="Volume.Down">Vol -</button>
             <button class="button h1_2" data="Volume.Up">Vol +</button>
+            <button class="button blank" id="xbmcVersion" style="position: absolute;right: 10px;bottom: 10px;width: 30px;height: 30px"></button>
+            
             <br>
         </div>
         
